--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@toast-ui/react-editor": "^2.5.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "@types/react-router-dom": "^5.1.7",
+    "github-markdown-css": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-markdown": "^6.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
+    "remark-gfm": "^1.0.0",
+    "rich-markdown-editor": "^11.8.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
